# data-engineering-pyspark

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
config/: settings.yaml
data/output/pedidos_por_cliente/: .part-00000-19588fb1-6e19-4719-b307-e92c54f0bf19-c000.snappy.parquet.crc  .part-00000-f04375ff-1ef4-41a1-a786-d9c882cd706f-c000.snappy.parquet.crc  part-00000-19588fb1-6e19-4719-b307-e92c54f0bf19-c000.snappy.parquet  part-00000-f04375ff-1ef4-41a1-a786-d9c882cd706f-c000.snappy.parquet
src/: main.py
src/config/: settings.py
src/dataeng_pyspark_data_pipeline/: main.py
src/dataeng_pyspark_data_pipeline/config/: settings.py
src/dataeng_pyspark_data_pipeline/io_utils/: data_handler.py
src/dataeng_pyspark_data_pipeline/pipeline/: pipeline.py
src/dataeng_pyspark_data_pipeline/processing/: transformations.py
src/dataeng_pyspark_data_pipeline/session/: spark_session.py
src/io_utils/: data_handler.py
src/pipeline/: pipeline.py
src/processing/: transformations.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_data_handler.py  test_settings.py  test_spark_session.py  test_transformations.py
